# F1-Analytics

./: .gitignore  .pre-commit-config.yaml  Home.py  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
pages/: 1_📈_Driver_Telemetry_Comparison.py  2_📊_Sector_Performance_Heatmap.py  3_⏱️_Race_Strategy_Timeline.py  4_🏆_Position_&_Overtake_Insights.py  5_🌦️_Lap_Times_&_Weather_Impact.py  6_🗺️_Track_Dynamics_Map.py
utils/: __init__.py  cache_utils.py  driver_data.py  session_data.py  styling.py
