[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[project]
name = "f1-analytics"
version = "0.1.0"
description = "INF8808 Final Project"
authors = [
    {name = "Thomas Villeneuve",email = "thomas-2.villeneuve@polymtl.ca"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "fastf1 (>=3.5.3,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
